ava-rs/tui/src/chatwidget/snapshots/ava_tui__chatwidget__tests__slash_export_filename_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: popup
---
  Save conversation

› ava-session-00000000-0000-0000-0000-000000000123.md

  enter submit · esc back
